# lightning-test

./: .gitignore  INITIAL_PLAN.md  README.md  pyproject.toml
docs/: README.md  launching-remote-jobs-with-lightning.md  launching-remote-jobs-with-modal.md
src/: __init__.py  completion.py  main.py  prompts.py
src/backends/: __init__.py  base.py  lightning.py  local.py  modal_app.py  modal_backend.py
src/core/: __init__.py  detector.py  hf_auth.py  images.py  lightning_config.py  summary.py
tests/: test_cli.py  test_completion.py  test_hf_auth.py  test_images.py  test_lightning_config.py  test_summary.py
viewer/: index.html
