[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "object-detector-cli"
version = "0.1.0"
description = "A production CLI for cross-backend object detection pipeline orchestration."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "click>=8.1.7",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "pillow>=10.3.0",
    "lightning-sdk>=0.3.0",
    "modal>=0.62.0",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.0",
    "timm>=0.9.0",
    "accelerate>=0.27.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
object-detector = "src.main:run_pipeline"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
